# work-2026

./: .gitignore  TODO.md  align_to_json.py  align_whisper_ref.py  correct_splits.py  eval-plan.md  extract-index-json.py  gemma4_ocr.py  gutenberg-scraper.py  nettt.md  preprocess-ocr-labels.py  quiggin-extraction-session.md  read-html.ipynb  record_streams.py  resemblyzer-eval-results.md  results-analysis.md  reviews.md  scribbles.qmd  spoken-sentence-transformers-report.md  sst.bib  sst.qmd  training-plan.md
align-html/: README  align.py  fetch_text.py  parse_index.py
align_librivox/: __init__.py  align.py  align_to_json.py  book_config.yaml  parse_index.py  requirements.txt  split_text.py
align_whisper/: align_to_json.py
correct_whisper/: correct_splits.py
cross-dialect-g2p/: CLAUDE.md  convert.py  predict.py  prepare_data.py  pyproject.toml  train.py
ctc-segmentation/: index.qmd
derived-text/: TODO.md  TODO2.md  TODO3.md  paper.qmd  workshop.md
dieck22/: AGENT.md
dysfluent-wfst/: 2506.01129v2-summary.md  CLAUDE.md  decode.py  pyproject.toml  refs.bib
dysfluent-wfst/dysfluent_wfst/: __init__.py  alignment.py  cli.py  ctc_topo.py  decoder.py  hf_stream.py  k2_bridge.py  lexicon.py  praat.py  ref_fst.py  rules.py  symbols.py  variation.py
dysfluent-wfst/rules/: swedish_hypo.yaml
editions-alignment/: CLAUDE.md  aligner.py
falcon-pdf-ocr/: Dockerfile  README.md  batch_ocr.py  requirements.txt  run.sh
gbi/: build_gbi.py  dialect_map.py  sentence_align.py
gemma4-ctc/: CLAUDE.md  collator.py  config.json  ctc_vocab.py  (+12 more)
librivox-multispeaker/: AGENTS.md  acoustic_encoder.py  multi_axis_loss.py  multi_axis_projection.py  multi_axis_sampler.py  multi_axis_sentence_transformer.py  multi_axis_trainer.py  notes.md  properties.tsv  pyproject.toml  res.txt  script.py  test_multi_axis.py  train_projection.py  train_wavlm.py  transcribe.py
librivox-multispeaker/docs/: adding-a-dataset.md  adding-a-loss.md  adding-an-encoder.md
librivox-multispeaker/mseb/: CLAUDE.md
librivox-multispeaker/spoken_sentence_transformers/: __init__.py  loss.py  projection.py  sentence_transformer.py  trainer.py
librivox-multispeaker/spoken_sentence_transformers/encoders/: __init__.py  base.py  hf.py
librivox-multispeaker/tests/: test_projection.py
papermill-hfmount/: papermill_hfmount.py  pyproject.toml
(+810 files in other folders)
