[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dysfluent-wfst"
version = "0.1.0"
description = "Phonetic variation detection using pynini FST construction and k2 dense lattice intersection"
requires-python = ">=3.9"
dependencies = [
    "pynini>=2.1.5",
    "k2>=1.24",
    "torch>=2.0",
    "torchaudio>=2.0",
    "transformers>=4.30",
    "datasets>=2.20",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "praat-parselmouth>=0.4.3",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
dysfluent-decode = "dysfluent_wfst.cli:main"
